log

Wed 13 Mar 2024 08:54:41 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:1: error: expected expression before ‘}’ token
   32 | }
      | ^
Compilation failed
bc68ea2
Wed 13 Mar 2024 08:55:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:1: error: expected expression before ‘}’ token
   32 | }
      | ^
Compilation failed
f4521b6
Wed 13 Mar 2024 08:55:37 PM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
test.c: In function ‘reverseArray’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6410f24
